--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
         <div class="carousel w-full">
           <div id="slide1" class="carousel-item relative w-full">
             <img
-              src="images/banner.png"
+              src="./images/banner.png"
               class="lg:w-full w-11/12 mx-auto rounded-2xl"
             />
             <div
@@ -106,7 +106,7 @@
           </div>
           <div id="slide2" class="carousel-item relative w-full">
             <img
-              src="images/banner2.jpg"
+              src="./images/banner2.jpg"
               class="lg:w-full w-11/12 mx-auto rounded-2xl"
             />
             <div
@@ -362,7 +362,7 @@
             <div class="lg:flex lg:justify-between gap-6 lg:p-6 p-4">
               <!-- img  -->
               <div class="">
-                <img class="lg:h-full w-full" src="images/egal.png" alt="" />
+                <img class="lg:h-full w-full" src="./images/egal.png" alt="" />
               </div>
               <div>
                 <!-- icons -->
@@ -407,7 +407,7 @@
             <div class="lg:flex lg:justify-between gap-6 lg:p-6 p-4">
               <!-- img  -->
               <div class="">
-                <img class="lg:h-full w-full" src="images/cap.png" alt="" />
+                <img class="lg:h-full w-full" src="./images/cap.png" alt="" />
               </div>
               <div>
                 <!-- icons -->
@@ -450,7 +450,7 @@
             <div class="lg:flex lg:justify-between gap-6 lg:p-6 p-4">
               <!-- img  -->
               <div class="">
-                <img class="lg:h-full w-full" src="images/jursy.png" alt="" />
+                <img class="lg:h-full w-full" src="./images/jursy.png" alt="" />
               </div>
               <div>
                 <!-- icons -->
@@ -495,7 +495,7 @@
             <div class="lg:flex lg:justify-between gap-6 lg:p-6 p-4">
               <!-- img  -->
               <div class="">
-                <img class="lg:h-full w-full" src="images/helamt.png" alt="" />
+                <img class="lg:h-full w-full" src="./images/helamt.png" alt="" />
               </div>
               <div>
                 <!-- icons -->
@@ -542,7 +542,7 @@
               <div class="">
                 <img
                   class="lg:h-full w-full"
-                  src="images/football.png"
+                  src="./images/football.png"
                   alt=""
                 />
               </div>
@@ -601,7 +601,7 @@
         <!-- Clients Question Sections -->
         <div class="lg:flex lg:gap-6 justify-center lg:w-full w-11/12 mx-auto lg:my-[3rem]">
           <div>
-            <img class="lg:my-0 my-6" src="images/qustionmark.png" alt="" />
+            <img class="lg:my-0 my-6" src="./images/qustionmark.png" alt="" />
           </div>
           <div class="">
             <div class="collapse collapse-plus bg-base-200">
@@ -689,7 +689,7 @@
               <div
                 class="lg:w-[374px] lg:h-[184px] shrink-0 bg-[#F9FEF1] rounded-2xl p-6 mx-auto"
               >
-                <img src="images/icons/telphone.png" alt="" />
+                <img src="./images/icons/telphone.png" alt="" />
                 <p class="text-base font-normal mt-6 text-gray-300">
                   Phone Number :
                 </p>
@@ -698,14 +698,14 @@
               <div
                 class="lg:w-[374px] lg:h-[184px] shrink-0 bg-[#FFFCEF] rounded-2xl my-6 p-6 mx-auto"
               >
-                <img src="images/icons/email.png" alt="" />
+                <img src="./images/icons/email.png" alt="" />
                 <p class="text-base font-normal mt-6 text-gray-300">Email :</p>
                 <h5 class="text-lg font-bold">hockeys@support.com</h5>
               </div>
               <div
                 class="lg:w-[374px] lg:h-[184px] shrink-0 bg-[#F0F6FE] rounded-2xl p-6 mx-auto"
               >
-                <img src="images/icons/map.png" alt="" />
+                <img src="./images/icons/map.png" alt="" />
                 <p class="text-base font-normal mt-6 text-gray-300">
                   Location :
                 </p>
