--- a/index.html
+++ b/index.html
@@ -614,7 +614,7 @@
               </div>
             </div>
             <div class="collapse collapse-plus bg-base-200 my-4">
-              <input type="radio" name="my-accordion-3" checked="checked" />
+              <input type="radio" name="my-accordion-3"  />
               <div class="collapse-title text-xl font-bold">
                 Hockey Training
               </div>
@@ -625,7 +625,7 @@
               </div>
             </div>
             <div class="collapse collapse-plus bg-base-200">
-              <input type="radio" name="my-accordion-3" checked="checked" />
+              <input type="radio" name="my-accordion-3"  />
               <div class="collapse-title text-xl font-bold">
                 Private Lessons
               </div>
@@ -636,7 +636,7 @@
               </div>
             </div>
             <div class="collapse collapse-plus bg-base-200 my-3">
-              <input type="radio" name="my-accordion-3" checked="checked" />
+              <input type="radio" name="my-accordion-3"  />
               <div class="collapse-title text-xl font-bold">Ski Touring</div>
               <div class="collapse-content">
                 <p>
@@ -645,7 +645,7 @@
               </div>
             </div>
             <div class="collapse collapse-plus bg-base-200">
-              <input type="radio" name="my-accordion-3" checked="checked" />
+              <input type="radio" name="my-accordion-3"  />
               <div class="collapse-title text-xl font-bold">Booking</div>
               <div class="collapse-content">
                 <p>
@@ -654,7 +654,7 @@
               </div>
             </div>
             <div class="collapse collapse-plus bg-base-200 my-3">
-              <input type="radio" name="my-accordion-3" checked="checked" />
+              <input type="radio" name="my-accordion-3"  />
               <div class="collapse-title text-xl font-bold">Pricings</div>
               <div class="collapse-content">
                 <p>
