--- a/index.html
+++ b/index.html
@@ -336,8 +336,7 @@
                   <p
                     class="text-opacity-80 text-gray-700 dark:text-gray-300 text-base font-medium leading-26"
                   >
-                    Dolor sit amet consectetur. Ut urna diam quis sagittis. Ut
-                    urna diam quis sagittis.
+                  Players showcase agility, teamwork, and precision, creating an exhilarating experience for fans worldwide.
                   </p>
                 </div>
                 <!-- price -->
